# hackathon-backend

./: .env  .gitignore  Dockerfile  client-cert.pem  pyproject.toml  requirements.txt  server-ca.pem
api/: core.py  db.py  deps.py  main.py  migrate_db.py
api/cruds/: brand.py  category.py  comment.py  history.py  item.py  users.py
api/data/: encoders.pkl
api/models/: __init__.py  brand.py  category.py  comment.py  condition.py  embedding.py  history.py  item.py  item_image.py  transaction.py  users.py
api/routers/: aiSearch.py  auth.py  brand.py  category.py  comment.py  item.py  me.py  recommend.py  search.py  users.py
api/schemas/: brand.py  chat.py  comment.py  history.py  item.py  order.py  predict.py  token.py  users.py
api/utils/: function.py  searcher.py  two_tower_model.py
core/: security.py
hackathon-backend/: main.py
security/: client-key.pem
